# vector-db

./: Cargo.toml  README.md
src/: embedder.rs  main.rs  store.rs
